--- a/base.html
+++ b/base.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br">  <!-- Definindo o idioma da página como português brasileiro -->
 <head>
-    <meta charset="UTF-8">
-    <title>Comunidade Impressionadora</title>
+    <meta charset="UTF-8">  <!-- Definindo a codificação de caracteres como UTF-8 -->
+    <title>Comunidade Impressionadora</title>  <!-- Título da página que aparece na aba do navegador -->
 
+    <!-- Link para o CSS do Bootstrap 5, utilizado para facilitar o design responsivo e os componentes prontos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <!-- Link para o arquivo CSS personalizado (main.css), localizado na pasta 'static' -->
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
+    <!-- A seção 'head' pode ser sobrescrita nas páginas que herdam esse template -->
     {% block head %}
     {% endblock %}
 </head>
 <body>
 
+    <!-- Inclusão do arquivo 'navbar.html' para exibir a barra de navegação -->
     {% include 'navbar.html' %}
 
     <div class="container">
+        <!-- Exibindo mensagens flash (alertas) de uma vez, com suas categorias -->
         {% with mensagens = get_flashed_messages(with_categories=True) %}
             {% if mensagens %}
                 {% for categoria, mensagem in mensagens %}
+                    <!-- Exibindo a mensagem de alerta com sua categoria (ex: sucesso, erro) -->
                     <div class="alert {{ categoria }}">
                         {{ mensagem }}
                     </div>
@@ -26,9 +33,11 @@
         {% endwith %}
     </div>
 
+    <!-- A seção 'body' pode ser sobrescrita nas páginas que herdam esse template -->
     {% block body %}
     {% endblock %}
 
+    <!-- Script para carregar os componentes JavaScript do Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
