--- a/login.html
+++ b/login.html
@@ -1,110 +1,113 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %}  <!-- Herda o layout do template base.html -->
 
-{% block body %}
-    <div class="container">
-        <h1>Faça Login ou Crie sua Conta para continuar</h1>
-        <hr>
-        <div class="row">
-            <div class="col">
-                <form method="POST" action="" class="border p-4 mt-2">
-                    {{ form_login.csrf_token }}
-                    <legend>Login</legend>
-                    <fieldset>
-                        <div class="form-group">
-                            {{ form_login.email.label(class="form-control-label") }}
-                            {% if form_login.email.errors %}
-                                {{ form_login.email(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
+{% block body %}  <!-- Início do bloco 'body', que será sobrescrito no template base.html -->
+
+    <div class="container">  <!-- Container do Bootstrap para centralizar o conteúdo -->
+        <h1>Faça Login ou Crie sua Conta para continuar</h1>  <!-- Título principal -->
+        <hr>  <!-- Linha horizontal para separar seções -->
+
+        <div class="row">  <!-- Linha com duas colunas: uma para o formulário de login e outra para criar conta -->
+            <div class="col">  <!-- Primeira coluna, para o formulário de login -->
+                <form method="POST" action="" class="border p-4 mt-2">  <!-- Formulário de login com borda, padding e margem superior -->
+                    {{ form_login.csrf_token }}  <!-- Token CSRF para proteção contra ataques -->
+                    <legend>Login</legend>  <!-- Título do formulário de login -->
+                    <fieldset>  <!-- Campo agrupando os elementos do formulário -->
+                        <div class="form-group">  <!-- Campo de entrada para o e-mail -->
+                            {{ form_login.email.label(class="form-control-label") }}  <!-- Rótulo para o campo de e-mail -->
+                            {% if form_login.email.errors %}  <!-- Verifica se existem erros no campo de e-mail -->
+                                {{ form_login.email(class="form-control is-invalid") }}  <!-- Aplica a classe 'is-invalid' se houver erro -->
+                            <div class="invalid-feedback">  <!-- Exibe os erros de validação -->
                                 {% for erro in form_login.email.errors %}
                                     {{ erro }}
                                 {% endfor %}
                             </div>
                             {% else %}
-                                {{ form_login.email(class="form-control") }}
+                                {{ form_login.email(class="form-control") }}  <!-- Exibe o campo de e-mail sem erros -->
                             {% endif %}
                         </div>
-                        <div class="form-group">
-                            {{ form_login.senha.label(class="form-control-label") }}
-                            {% if form_login.senha.errors %}
-                                {{ form_login.senha(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
+                        <div class="form-group">  <!-- Campo de entrada para a senha -->
+                            {{ form_login.senha.label(class="form-control-label") }}  <!-- Rótulo para o campo de senha -->
+                            {% if form_login.senha.errors %}  <!-- Verifica se existem erros no campo de senha -->
+                                {{ form_login.senha(class="form-control is-invalid") }}  <!-- Aplica a classe 'is-invalid' se houver erro -->
+                            <div class="invalid-feedback">  <!-- Exibe os erros de validação -->
                                 {% for erro in form_login.senha.errors %}
                                     {{ erro }}
                                 {% endfor %}
                             </div>
                             {% else %}
-                                {{ form_login.senha(class="form-control") }}
+                                {{ form_login.senha(class="form-control") }}  <!-- Exibe o campo de senha sem erros -->
                             {% endif %}
                         </div>
-                        <div class="form-group">
-                            {{ form_login.lembrar_dados.label(class="form-check-label") }}
-                            {{ form_login.lembrar_dados(class="form-check-input") }}
+                        <div class="form-group">  <!-- Checkbox para lembrar dados -->
+                            {{ form_login.lembrar_dados.label(class="form-check-label") }}  <!-- Rótulo para o checkbox -->
+                            {{ form_login.lembrar_dados(class="form-check-input") }}  <!-- Campo checkbox para lembrar dados -->
                         </div>
                     </fieldset>
-                    {{ form_login.botao_submit_login(class="btn btn-primary mt-2") }}
+                    {{ form_login.botao_submit_login(class="btn btn-primary mt-2") }}  <!-- Botão de login -->
                 </form>
             </div>
-            <div class="col">
-                <form method="POST" action="" class="border p-4 mt-2">
-                    {{ form_criarconta.csrf_token }}
-                    <legend>Criar Conta</legend>
-                    <fieldset>
-                        <div class="form-group">
-                            {{ form_criarconta.username.label(class="form-control-label") }}
-                            {% if form_criarconta.username.errors %}
-                                {{ form_criarconta.username(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
+            <div class="col">  <!-- Segunda coluna, para o formulário de criação de conta -->
+                <form method="POST" action="" class="border p-4 mt-2">  <!-- Formulário de criação de conta com borda, padding e margem superior -->
+                    {{ form_criarconta.csrf_token }}  <!-- Token CSRF para proteção contra ataques -->
+                    <legend>Criar Conta</legend>  <!-- Título do formulário de criação de conta -->
+                    <fieldset>  <!-- Campo agrupando os elementos do formulário -->
+                        <div class="form-group">  <!-- Campo de entrada para o nome de usuário -->
+                            {{ form_criarconta.username.label(class="form-control-label") }}  <!-- Rótulo para o campo de nome de usuário -->
+                            {% if form_criarconta.username.errors %}  <!-- Verifica se existem erros no campo de nome de usuário -->
+                                {{ form_criarconta.username(class="form-control is-invalid") }}  <!-- Aplica a classe 'is-invalid' se houver erro -->
+                            <div class="invalid-feedback">  <!-- Exibe os erros de validação -->
                                 {% for erro in form_criarconta.username.errors %}
                                     {{ erro }}
                                 {% endfor %}
                             </div>
                             {% else %}
-                                {{ form_criarconta.username(class="form-control") }}
+                                {{ form_criarconta.username(class="form-control") }}  <!-- Exibe o campo de nome de usuário sem erros -->
                             {% endif %}
                         </div>
-                        <div class="form-group">
-                            {{ form_criarconta.email.label(class="form-control-label") }}
-                            {% if form_criarconta.email.errors %}
-                                {{ form_criarconta.email(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
+                        <div class="form-group">  <!-- Campo de entrada para o e-mail -->
+                            {{ form_criarconta.email.label(class="form-control-label") }}  <!-- Rótulo para o campo de e-mail -->
+                            {% if form_criarconta.email.errors %}  <!-- Verifica se existem erros no campo de e-mail -->
+                                {{ form_criarconta.email(class="form-control is-invalid") }}  <!-- Aplica a classe 'is-invalid' se houver erro -->
+                            <div class="invalid-feedback">  <!-- Exibe os erros de validação -->
                                 {% for erro in form_criarconta.email.errors %}
                                     {{ erro }}
                                 {% endfor %}
                             </div>
                             {% else %}
-                                {{ form_criarconta.email(class="form-control") }}
+                                {{ form_criarconta.email(class="form-control") }}  <!-- Exibe o campo de e-mail sem erros -->
                             {% endif %}
                         </div>
-                        <div class="form-group">
-                            {{ form_criarconta.senha.label(class="form-control-label") }}
-                            {% if form_criarconta.senha.errors %}
-                                {{ form_criarconta.senha(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
+                        <div class="form-group">  <!-- Campo de entrada para a senha -->
+                            {{ form_criarconta.senha.label(class="form-control-label") }}  <!-- Rótulo para o campo de senha -->
+                            {% if form_criarconta.senha.errors %}  <!-- Verifica se existem erros no campo de senha -->
+                                {{ form_criarconta.senha(class="form-control is-invalid") }}  <!-- Aplica a classe 'is-invalid' se houver erro -->
+                            <div class="invalid-feedback">  <!-- Exibe os erros de validação -->
                                 {% for erro in form_criarconta.senha.errors %}
                                     {{ erro }}
                                 {% endfor %}
                             </div>
                             {% else %}
-                                {{ form_criarconta.senha(class="form-control") }}
+                                {{ form_criarconta.senha(class="form-control") }}  <!-- Exibe o campo de senha sem erros -->
                             {% endif %}
                         </div>
-                        <div class="form-group">
-                            {{ form_criarconta.confirmacao_senha.label(class="form-control-label") }}
-                            {% if form_criarconta.confirmacao_senha.errors %}
-                                {{ form_criarconta.confirmacao_senha(class="form-control is-invalid") }}
-                            <div class="invalid-feedback">
+                        <div class="form-group">  <!-- Campo de entrada para confirmação de senha -->
+                            {{ form_criarconta.confirmacao_senha.label(class="form-control-label") }}  <!-- Rótulo para o campo de confirmação de senha -->
+                            {% if form_criarconta.confirmacao_senha.errors %}  <!-- Verifica se existem erros no campo de confirmação de senha -->
+                                {{ form_criarconta.confirmacao_senha(class="form-control is-invalid") }}  <!-- Aplica a classe 'is-invalid' se houver erro -->
+                            <div class="invalid-feedback">  <!-- Exibe os erros de validação -->
                                 {% for erro in form_criarconta.confirmacao_senha.errors %}
                                     {{ erro }}
                                 {% endfor %}
                             </div>
                             {% else %}
-                                {{ form_criarconta.confirmacao_senha(class="form-control") }}
+                                {{ form_criarconta.confirmacao_senha(class="form-control") }}  <!-- Exibe o campo de confirmação de senha sem erros -->
                             {% endif %}
                         </div>
                     </fieldset>
-                    {{ form_criarconta.botao_submit_criarconta(class="btn btn-primary mt-2") }}
+                    {{ form_criarconta.botao_submit_criarconta(class="btn btn-primary mt-2") }}  <!-- Botão para submeter o formulário de criação de conta -->
                 </form>
             </div>
         </div>
     </div>
-{% endblock %}
+
+{% endblock %}  <!-- Fim do bloco 'body' -->
