--- a/navbar.html
+++ b/navbar.html
@@ -1,35 +1,35 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid container">
-    <a class="navbar-brand" href="{{ url_for('home') }}">Comunidade Impressionadora</a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">  <!-- Barra de navegação com o estilo 'navbar-light' e fundo claro -->
+  <div class="container-fluid container">  <!-- Contêiner fluido para a navbar -->
+    <a class="navbar-brand" href="{{ url_for('home') }}">Comunidade Impressionadora</a>  <!-- Nome da marca, clicável para a home -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">  <!-- Toggling (esconder/exibir) do menu em telas pequenas -->
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">  <!-- Lista de itens do menu principal -->
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="{{ url_for('home') }}">Início</a>
+          <a class="nav-link" aria-current="page" href="{{ url_for('home') }}">Início</a>  <!-- Link para a home -->
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('usuarios') }}">Usuários</a>
+          <a class="nav-link" href="{{ url_for('usuarios') }}">Usuários</a>  <!-- Link para a página de usuários -->
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('contato') }}">Contato</a>
+          <a class="nav-link" href="{{ url_for('contato') }}">Contato</a>  <!-- Link para a página de contato -->
         </li>
       </ul>
-      <ul class="d-flex navbar-nav">
-        {% if current_user.is_authenticated %}
+      <ul class="d-flex navbar-nav">  <!-- Lista de itens adicionais na navbar -->
+        {% if current_user.is_authenticated %}  <!-- Verifica se o usuário está autenticado -->
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('criar_post') }}">Criar Post</a>
+              <a class="nav-link" href="{{ url_for('criar_post') }}">Criar Post</a>  <!-- Link para criar um novo post (para usuário logado) -->
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('perfil') }}">Meu Perfil</a>
+              <a class="nav-link" href="{{ url_for('perfil') }}">Meu Perfil</a>  <!-- Link para o perfil do usuário -->
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('sair') }}">Sair</a>
+              <a class="nav-link" href="{{ url_for('sair') }}">Sair</a>  <!-- Link para logout -->
             </li>
         {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+            <a class="nav-link" href="{{ url_for('login') }}">Login</a>  <!-- Link para login (para usuários não logados) -->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('login') }}">Criar Conta</a>
+            <a class="nav-link" href="{{ url_for('login') }}">Criar Conta</a>  <!-- Link para criação de conta -->
           </li>
         {% endif %}
       </ul>
