--- a/perfil.html
+++ b/perfil.html
@@ -1,38 +1,53 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %}  <!-- Herda o layout do 'base.html' -->
 
-{% block body %}
+{% block body %}  <!-- Início do conteúdo principal da página -->
+
     <div class="container mt-5 d-flex justify-content-center">
-        <div class="card p-3">
-            <div class="d-flex align-items-center">
-                <div class="image pe-2"> <img src="{{ foto_perfil }}" class="rounded" width="200"> </div>
+        <div class="card p-3">  <!-- Cartão de perfil do usuário -->
+            <div class="d-flex align-items-center">  <!-- Alinha a imagem do perfil e as informações -->
+                <div class="image pe-2"> <img src="{{ foto_perfil }}" class="rounded" width="200"> </div>  <!-- Exibe a imagem de perfil do usuário -->
                 <div class="ml-3 w-100">
-                    <h4 class="mb-0 mt-0">{{ current_user.username }}</h4> <span>{{ current_user.email }}</span>
-                    <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">
-                        {% if 'Não Informado' in current_user.cursos %}
-                            <div class="d-flex flex-column"> <span class="articles">Cursos</span> <span class="number1">0</span> </div>
+                    <h4 class="mb-0 mt-0">{{ current_user.username }}</h4>  <!-- Nome de usuário -->
+                    <span>{{ current_user.email }}</span>  <!-- E-mail do usuário -->
+                    <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded text-white stats">  <!-- Estatísticas do perfil -->
+                        {% if 'Não Informado' in current_user.cursos %}  <!-- Verifica se o usuário não informou cursos -->
+                            <div class="d-flex flex-column"> 
+                                <span class="articles">Cursos</span> 
+                                <span class="number1">0</span>  <!-- Exibe "0" se o usuário não tiver cursos -->
+                            </div>
                         {% else %}
-                            <div class="d-flex flex-column"> <span class="articles">Cursos</span> <span class="number1">{{ current_user.cursos.count(';') + 1 }}</span> </div>
+                            <div class="d-flex flex-column"> 
+                                <span class="articles">Cursos</span> 
+                                <span class="number1">{{ current_user.cursos.count(';') + 1 }}</span>  <!-- Conta o número de cursos do usuário -->
+                            </div>
                         {% endif %}
 
-                        <div class="d-flex flex-column"> <span class="rating">Posts</span> <span class="number3">{{ current_user.contar_posts() }}</span> </div>
+                        <div class="d-flex flex-column"> 
+                            <span class="rating">Posts</span> 
+                            <span class="number3">{{ current_user.contar_posts() }}</span>  <!-- Exibe o número de posts do usuário -->
+                        </div>
                     </div>
                     <div class="button mt-2 d-flex flex-row align-items-center">
                         <a class="w-100" href="{{ url_for('editar_perfil') }}">
-                            <button class="btn btn-sm btn-outline-primary w-100">Editar Perfil</button>
+                            <button class="btn btn-sm btn-outline-primary w-100">Editar Perfil</button>  <!-- Botão para editar o perfil -->
                         </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Exibição dos cursos do usuário -->
     <div class="row justify-content-center">
         <div class="col col-4" style="text-align: center">
             <strong>Cursos</strong><br>
-            {% for curso in current_user.cursos.split(';') %}
-                <button type="button" class="btn btn-success mt-2" disabled>{{ curso }}</button>
+            {% for curso in current_user.cursos.split(';') %}  <!-- Itera sobre os cursos separados por ";" -->
+                <button type="button" class="btn btn-success mt-2" disabled>{{ curso }}</button>  <!-- Exibe cada curso em um botão -->
             {% endfor %}
         </div>
     </div>
-{% block form_editar_perfil %}
+
+{% block form_editar_perfil %}  <!-- Bloco para adicionar conteúdo adicional ao editar perfil -->
 {% endblock %}
-{% endblock %}
+
+{% endblock %}  <!-- Fim do conteúdo principal -->
